 CHANGED: Hotkeys added to support more remote control keys
 CHANGED: Support for Theora in Matroska internal splitter
 CHANGED: LibVorbis updated to v1.2.0
 CHANGED: Improved streaming performances
 CHANGED: Prevent display or computer to sleep during playback
 CHANGED: Faad library updated to rev 2.2.7
 CHANGED: LibPNG updated to release 1.2.35 (fix security bug)
 FIXED  : Support for Theora stream in Ogg internal splitter
 FIXED  : Save thumbnails crash in x64
 FIXED  : Bugs on presentation graphics (missing subtitles, better synchronization)
 FIXED  : Audio change on M2TS files reset the selected subtitle
 FIXED  : Switch to "Minimal view" reset main menu language to English
 FIXED  : Bug in Mpeg splitter for VC1
 FIXED  : Maximum texture resolution to "Desktop" not working with Haali renderer (Bug #2456735)
 FIXED  : Better synchronization with EVR custom to improve playback smoothness
 FIXED  : 24 bits LPCM not properly play 
 FIXED  : Possible deadlock with Reclock
 FIXED  : memory leak in DXVA decoder (when opening new file)


v1.2.908.0 - 30.November 2008
======================
 NEW	: support Multi-Monitor configuration, select Monitor for full-screen playback
 NEW	: creation of minidump when mpc crash
 NEW    : Simplified Chinese & Traditional Chinese translations
 NEW    : Pixel shader to convert BT601 -> BT701 (request #1911511)
 NEW    : YV12 Chroma Upsampling pixel shader added (http://forum.doom9.org/showthread.php?p=1184975#post1184975)
 NEW    : Recursively adding directories to the Playlist (feature request #2013805), add as New Menu item
 NEW    : Support for M2TS presentation graphics streams (only for EVR Custom and VMR9 Renderless)
 NEW    : Command lines "/startpos hh:mm:ss.ff", "/dvdpos title#chapter" and "/dvdpos title#hh:mm:ss.ff" to start playback to position
 NEW    : Differents icons for each format associated with mpc
 NEW    : Differents icons for each format associated with mpc
 NEW    : support H264 and AAC in FLV splitter